@@ -1,8 +1,6 @@
 - fragments: fix orientation change 
 - fragments: fix scrolling in profile editor
 
-- context menu for autoload
-
 - make autoload restoreable
 - backup configuration
 - create a default config
