@@ -6,7 +6,8 @@ V
 
 V 2.3.0
 * features
-- Autoload based on weekdays 
+- autoload based on weekdays 
+- context menu for autoload
 * bug fixes
 -
 
